# project-arcade

./: .dcignore  .gitignore  changelog.md  index.html  learning.md  package-lock.json  package.json  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  data.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20231027000000_create_games_table.sql  20231028000000_add_metadata_fields.sql
src-tauri/src/: config.rs  database.rs  error.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: installer.rs  library.rs  mod.rs
src-tauri/src/services/: metadata.rs
src/components/: AddGameModal.vue  GameCard.vue
src/lib/: canvallax.ts
src/router/: index.ts
src/services/: api.ts
src/stores/: library.ts  settings.ts
src/types/: images.d.ts  index.ts
src/views/: GameDetailView.vue  HomeView.vue  SettingsView.vue
