[package]
name = "project-arcade"
version = "0.1.0"
description = "A self-contained desktop game library and launcher."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open", "window-all", "app-all", "fs-all", "path-all", "dialog-all", "process-all"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
directories = "5.0"
unrar = "0.5.2" # Note: Check compatibility and platform support for this crate
reqwest = { version = "0.11", features = ["json"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
